syntax = "proto3";

package cgerrors;

option go_package="github.com/kucjac/cleango/cgerrors";

// Error is the error message that has id, it's code and a detail.
message Error {
  string id = 1;
  ErrorCode code = 2;
  string detail = 3;
  string process = 4;
  map<string, string> meta = 5;
}

// ErrorCode is a code that defines errors specification.
enum ErrorCode {
  OK  = 0;
  Canceled = 1;
  Unknown = 2;
  InvalidArgument = 3;
  DeadlineExceeded = 4;
  NotFound = 5;
  AlreadyExists = 6;
  PermissionDenied = 7;
  ResourceExhausted = 8;
  FailedPrecondition = 9;
  Aborted = 10;
  OutOfRange = 11;
  Unimplemented = 12;
  Internal = 13;
  Unavailable = 14;
  DataLoss = 15;
  Unauthenticated = 16;
}